--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-    "files.autoSave": "afterDelay",
-    "files.autoSaveDelay": 5,
-    "liveServer.settings.wait": 3
+    "liveServer.settings.useWebExt": true
 }
